@@ -50,6 +50,7 @@ public class BasicMonotonicAccessioningWithAlternateRangesTest {
 
     @Autowired
     private BasicSpringDataRepositoryMonotonicDatabaseService<TestModel, TestMonotonicEntity> databaseService;
+
     @Autowired
     private ContiguousIdBlockService contiguousIdBlockService;
 
@@ -62,52 +63,62 @@ public class BasicMonotonicAccessioningWithAlternateRangesTest {
 
     @Test
     public void testAlternateRangesWithDifferentGenerators() throws AccessionCouldNotBeGeneratedException {
+        /* blockStartValue= 0, blockSize= 10 , interleaveInterval= 20
+          the new blocks are interleaved or jumped for each 20 items accessioned
+          so the accesions will be in the range of 0-19,40-59,80-99 */
         String categoryId = "eva_2";
         String instanceId2 = "test-instance_2";
         List<AccessionWrapper<TestModel, String, Long>> evaAccessions = getAccessioningService(categoryId, INSTANCE_ID)
-                .getOrCreate(getObjectsForAccessionsInRange(1, 10));
+                .getOrCreate(getObjectsForAccessionsInRange(1, 9));
         assertEquals(9, evaAccessions.size());
-        assertEquals(1, evaAccessions.get(0).getAccession().longValue());
-        assertEquals(9, evaAccessions.get(8).getAccession().longValue());
+        assertEquals(0, evaAccessions.get(0).getAccession().longValue());
+        assertEquals(8, evaAccessions.get(8).getAccession().longValue());
+        //BlockSize of 10 was reserved but only 9 elements have been accessioned
         assertEquals(1, contiguousIdBlockService
                 .getUncompletedBlocksByCategoryIdAndApplicationInstanceIdOrderByEndAsc(categoryId, INSTANCE_ID)
                 .size());
 
-        //get another service for same category
+        //Get another service for same category
         evaAccessions = getAccessioningService(categoryId, INSTANCE_ID)
-                .getOrCreate(getObjectsForAccessionsInRange(10, 30));
+                .getOrCreate(getObjectsForAccessionsInRange(11, 30));
         assertEquals(20, evaAccessions.size());
-        //Previous block ended here
-        assertEquals(10, evaAccessions.get(0).getAccession().longValue());
-        //New Block after 200 values interval
-        assertEquals(211, evaAccessions.get(1).getAccession().longValue());
-        assertEquals(220, evaAccessions.get(10).getAccession().longValue());
-        assertEquals(421, evaAccessions.get(11).getAccession().longValue());
-        assertEquals(429, evaAccessions.get(19).getAccession().longValue());
+        //Previous block ended here as only 9 elements were accessioned out of a blocksize of 10
+        assertEquals(9, evaAccessions.get(0).getAccession().longValue());
+
+        //New Block still not interleaved or jumped as the interleave point is 20
+        assertEquals(10, evaAccessions.get(1).getAccession().longValue());
+        assertEquals(19, evaAccessions.get(10).getAccession().longValue());
+
+        //New Block interleaved as it reached interleave point 20 so jumped 20 places to 40
+        assertEquals(40, evaAccessions.get(11).getAccession().longValue());
+        assertEquals(48, evaAccessions.get(19).getAccession().longValue());
+        //BlockSize if 10 was reserved but only 9 elements have been accessioned
         assertEquals(1, contiguousIdBlockService.getUncompletedBlocksByCategoryIdAndApplicationInstanceIdOrderByEndAsc
                 (categoryId, INSTANCE_ID).size());
 
-        //get another service for same category but different Instance
+        //Get another service for same category but different Instance
         evaAccessions = getAccessioningService(categoryId, instanceId2)
-                .getOrCreate(getObjectsForAccessionsInRange(30, 39));
+                .getOrCreate(getObjectsForAccessionsInRange(31, 39));
         assertEquals(9, evaAccessions.size());
-        assertNotEquals(430, evaAccessions.get(0).getAccession().longValue());
-        assertEquals(631, evaAccessions.get(0).getAccession().longValue());
-        assertEquals(639, evaAccessions.get(8).getAccession().longValue());
-        assertEquals(1, contiguousIdBlockService.getUncompletedBlocksByCategoryIdAndApplicationInstanceIdOrderByEndAsc
-                (categoryId, instanceId2).size());
+        //New Block from different instance have not jumped as still blocks are available before interleaving point
+        assertNotEquals(80, evaAccessions.get(0).getAccession().longValue());
+        assertEquals(50, evaAccessions.get(0).getAccession().longValue());
+        assertEquals(58, evaAccessions.get(8).getAccession().longValue());
+        assertEquals(1, contiguousIdBlockService
+                .getUncompletedBlocksByCategoryIdAndApplicationInstanceIdOrderByEndAsc(categoryId, instanceId2).size());
 
-        //get previous uncompleted service from instance1 and create accessions
+        //Get previous uncompleted service from instance1 and create accessions
         evaAccessions = getAccessioningService(categoryId, INSTANCE_ID)
-                .getOrCreate(getObjectsForAccessionsInRange(39, 41));
+                .getOrCreate(getObjectsForAccessionsInRange(40, 41));
         assertEquals(2, evaAccessions.size());
-        assertEquals(430, evaAccessions.get(0).getAccession().longValue());  //Block ended here
-        //New Block with 200 interval from last block made in INSTANCE_2
-        assertEquals(841, evaAccessions.get(1).getAccession().longValue());
+        assertEquals(49, evaAccessions.get(0).getAccession().longValue());  //Block ended here
+        //New Block with 20 interval from last block made in instanceId2
+        assertEquals(80, evaAccessions.get(1).getAccession().longValue());
     }
 
     private List<TestModel> getObjectsForAccessionsInRange(int startRange, int endRange) {
-        return IntStream.range(startRange, endRange).mapToObj(i -> TestModel.of("Test-" + i)).collect(Collectors.toList());
+        return IntStream.range(startRange, endRange + 1).mapToObj(i -> TestModel.of("Test-" + i)).collect(Collectors
+                .toList());
     }
 
     private AccessioningService<TestModel, String, Long> getAccessioningService(String categoryId,
